--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,11 @@
 {cover_enabled, true}.
 {erl_opts, [debug_info]}.
 
-{deps, [
-        {lfe, ".*",
-          {git, "git://github.com/rvirding/lfe.git", {branch, "master"}}}
-       ]}.
+{plugins, [
+    {'lfe-compile', ".*",
+        {git, "https://github.com/lfe-rebar3/compile.git", {tag, "0.2.1"}}}
+]}.
+
+{provider_hooks, [
+   {pre, [{compile, {lfe, compile}}]}
+]}.
