--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,7 @@
 {cover_enabled, true}.
 {erl_opts, [debug_info]}.
 
-{plugins, [
-    {'lfe-compile', ".*",
-        {git, "https://github.com/lfe-rebar3/compile.git", {tag, "0.2.1"}}}
-]}.
-
-{provider_hooks, [
-   {pre, [{compile, {lfe, compile}}]}
-]}.
+{deps, [
+        {lfe, ".*",
+          {git, "git://github.com/rvirding/lfe.git", {branch, "master"}}}
+       ]}.
